Adjusted CRUD Method and changed images list